# bambino

./: .gitignore  MODULE.bazel  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
scopes/kiwi/utf8/: .gitignore  build.zig  justfile
scopes/kiwi/utf8/src/: main.zig
scopes/mandrake/parser/: build.zig
scopes/mandrake/parser/src/: main.zig
